First commit - track all source files

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
     "format": "prettier --write src/",
-    "tailwind:init": "tailwindcss init -p"
+    "tailwind:init": "tailwindcss init -p",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^1.12.2",
@@ -40,6 +42,7 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9.33.0",
     "eslint-plugin-vue": "~10.4.0",
+    "gh-pages": "^6.3.0",
     "jiti": "^2.5.1",
     "npm-run-all2": "^8.0.4",
     "postcss": "^8.5.6",
