--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "tailwind:init": "tailwindcss init -p",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
+    ,
+    "dev:full": "concurrently \"npm run dev\" \"node server.js\" \"node soul-api-server.js\""
   },
   "dependencies": {
     "axios": "^1.12.2",
@@ -40,6 +42,7 @@
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/tsconfig": "^0.8.1",
     "autoprefixer": "^10.4.21",
+    "concurrently": "^9.2.1",
     "eslint": "^9.33.0",
     "eslint-plugin-vue": "~10.4.0",
     "gh-pages": "^6.3.0",
